...

    return Column(
      crossAxisAlignment: CrossAxisAlignment.center,
      children: [
        CommonCreateHabitTitle(titleText: 'Como vai ser o seu hábito?'),
        _buildTextInputCard(
          key: const ValueKey('input_name'),
          context: context,
          value: draftState.name,
          onChanged: (newName) {
            ref.read(draftHabitProvider.notifier).updateName(newName);
          },
          label: 'Ex: Treino de Musculação...',
...
          keyboardType: TextInputType.text,
        ),

        if (selectedHabitType == HabitConclusionType.goalQuantity) ...[
          const SizedBox(height: 16),
          _buildQuantityInputCard(
            key: const ValueKey('input_quantity'),
            context: context,
            ref: ref,
            label: 'Ex: Beber água 2x ao dia.',
            hint: '0',
          ),
        ],
...
