...
    final today = ref.watch(clockProvider).now();
    final tomorrow = today.add(const Duration(days: 1));

    if (startDate.year == today.year &&
        startDate.month == today.month &&
        startDate.day == today.day) {
      textStartDate = 'Hoje';
    } else if (startDate.year == tomorrow.year &&
        startDate.month == tomorrow.month &&
        startDate.day == tomorrow.day) {
      textStartDate = 'Amanhã';
    } else {
      final day = startDate.day.toString().padLeft(2, '0');
...
        ),
        // Data de Inicio
        _buildListTile(
          actionKey: const Key('start_date_option'),
          context: context,
          leadingIcon: Icons.calendar_month,
          tileTitle: 'Data de início',
          selectedDate: textStartDate,
          isSelected: true,
          onTap: () async {
            final now = ref.read(clockProvider).now();
            final todayOnly = DateTime(now.year, now.month, now.day);
            final todayOrSelectedDate = startDate;
...
