...
          mainAxisSize: MainAxisSize.min,
          children: [
            Row(
              mainAxisAlignment: MainAxisAlignment.spaceEvenly,
              children: [
                TextButton(
                  key: Key('edit_habit_text_button'),
                  onPressed: () async {
                    final config = ref.read(getNotificationConfigProvider)(
                      habit.id,
                    );
                    if (context.mounted) {
                      _startHabitEdition(context, ref, config);
...
